--- a/config/uc_discounts.settings.json
+++ b/config/uc_discounts.settings.json
@@ -1,6 +1,6 @@
 {
     "_config_name": "uc_discounts.settings",
-    "uc_discounts_checkout_allow_user_codes": "TRUE",
-    "uc_discounts_checkout_show_messages": "TRUE",
-    "uc_cap_uc_discounts_enabled": "TRUE"
+    "uc_discounts_checkout_allow_user_codes": 1,
+    "uc_discounts_checkout_show_messages": 1,
+    "uc_cap_uc_discounts_enabled": 1
 }
